--- a/framework-web/src/main/webapp/WEB-INF/web.xml
+++ b/framework-web/src/main/webapp/WEB-INF/web.xml
@@ -63,6 +63,18 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
 
+
+    <!-- 配置登陆过滤器 -->
+    <filter>
+        <filter-name>login</filter-name>
+        <filter-class>com.yt.filter.session.BmsSessionFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>login</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <!-- 解决工程编码过滤器 -->
     <filter>
         <filter-name>characterEncodingFilter</filter-name>
