--- a/pom.xml
+++ b/pom.xml
@@ -480,7 +480,7 @@
         </dependency>
 
         <!--dubbo服务响应的包-->
-        <dependency>
+     <!--   <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>dubbo</artifactId>
             <version>2.5.3</version>
@@ -496,7 +496,7 @@
             <groupId>com.github.sgroschupf</groupId>
             <artifactId>zkclient</artifactId>
             <version>0.1</version>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 </project>
