--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <poi.version>3.8-beta3</poi.version>
+        <poi.version>3.8</poi.version>
         <spring.version>4.0.5.RELEASE</spring.version>
         <spring.version.old>4.0.5.RELEASE</spring.version.old>
         <redis.version>1.4.2.RELEASE</redis.version>
@@ -476,7 +476,8 @@
             <artifactId>kaptcha</artifactId>
             <version>2.3.2</version>
             <scope>system</scope>
-            <systemPath>D:/jar/maven_jar2/com/google/code/kaptcha/2.3.2/kaptcha-2.3.2.jar</systemPath>
+            <systemPath>/usr/local/maven_myjar/com/google/code/kaptcha/2.3.2/kaptcha-2.3.2.jar</systemPath>
+            <!--<systemPath>D:/jar/maven_jar2/com/google/code/kaptcha/2.3.2/kaptcha-2.3.2.jar</systemPath>-->
         </dependency>
 
         <!--dubbo服务响应的包-->
