--- a/framework-web/src/main/resources/jdbc.properties
+++ b/framework-web/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3307/framework?useUnicode=true&amp;characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://localhost:3307/framework?useUnicode=true&characterEncoding=utf8
 #jdbc.url=jdbc:mysql://localhost:3306/framework?useUnicode=true&amp;characterEncoding=UTF-8
 jdbc.username=root
 jdbc.password=root
